--- a/changelog
+++ b/changelog
@@ -1,9 +1,15 @@
-systemd (7-1) unstable; urgency=low
+systemd (8-1) unstable; urgency=low
 
   * New upstream release
   * Only ship the top /cgroup
   * Pass --with-rootdir= to configure, to make it think / is / rather
     than //
+  * Add PAM module package
+  * Fix up dependencies in local-fs.target.  Closes: #594420
+  * Move systemadm to its own package.  Closes: #588451
+  * Update standards-version (no changes needed)
+  * Update README.Debian to explain how to use systemd.
+  * Add systemd-sysv package that provides /sbin/init and friends.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sat, 07 Aug 2010 07:31:38 +0200
 
