--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-systemd (8-1) unstable; urgency=low
+systemd (8-1) experimental; urgency=low
 
   * New upstream release
   * Only ship the top /cgroup
