Add missing #DEBHELPER# token to libpam-systemd

--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ systemd (11-2) experimental; urgency=low
 
   * Tighten depends from systemd-* on systemd to ensure they're upgraded
     in lockstep.  Thanks to Michael Biebl for the patch.
+  * Add missing #DEBHELPER# token to libpam-systemd
 
  --
 
