--- a/changelog
+++ b/changelog
@@ -8,6 +8,7 @@ systemd (11-2) experimental; urgency=low
   * Stop shipping /cgroup in the package.
   * Remove tmpwatch services, Debian doesn't have or use tmpwatch.
   * Make sure to enable GTK bits.
+  * Ship password agent
 
  --
 
