Document that /etc/network/run should be a symlink

--- a/changelog
+++ b/changelog
@@ -9,6 +9,8 @@ systemd (15-1) experimental; urgency=low
   * Remove -s from getty serial console invocation.
   * Add dependency on new util-linux to make sure /sbin/agetty exists
   * Don't mount /var/lock with gid=lock (Debian has no such group).
+  * Document problem with ifupdown's /etc/network/run being a normal
+    directory.
 
   [ Michael Biebl ]
   * Revert upstream change which requires libnotify 0.7 (not yet available in
