--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ systemd (16-1) experimental; urgency=low
 
   * New upstream release.
   * Get rid of now obsolete patches that are upstream.
+  * Use the built-in cryptsetup support in systemd.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sat, 15 Jan 2011 07:30:14 +0100
 
