--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ systemd (16-1) experimental; urgency=low
   * New upstream release.  Closes: #609611
   * Get rid of now obsolete patches that are upstream.
   * Use the built-in cryptsetup support in systemd.
+  * Don't use systemctl redirect for init scripts with X-Interactive: true
 
   [ Michael Biebl ]
   * Update package description
