--- a/changelog
+++ b/changelog
@@ -3,7 +3,8 @@ systemd (16-1) experimental; urgency=low
   [ Tollef Fog Heen ]
   * New upstream release.  Closes: #609611
   * Get rid of now obsolete patches that are upstream.
-  * Use the built-in cryptsetup support in systemd.
+  * Use the built-in cryptsetup support in systemd, build-depend on
+    libcryptsetup-dev (>= 2:1.2.0-1) to get a libcryptsetup in /lib.
   * Don't use systemctl redirect for init scripts with X-Interactive: true
 
   [ Michael Biebl ]
