--- a/changelog
+++ b/changelog
@@ -22,6 +22,7 @@ systemd (15-1) UNRELEASED; urgency=low
   [ Tollef Fog Heen ]
   * New upstream version, thanks a lot to Michael Biebl for help with
     preparing this version.
+    - This version handles cycle breaking better.  Closes: #609225
   * Add libaudit-dev to build-depends
   * /usr/share/systemd/session has been renamed to /usr/share/systemd/user
     upstream, adjust build system accordingly.
