--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
-systemd (16-2) UNRELEASED; urgency=low
+systemd (17-1) UNRELEASED; urgency=low
 
+  * New upstream release
   * Clarify ifupdown instructions in README.Debian somewhat.
 
- --
+ -- Tollef Fog Heen <tfheen@debian.org>  Sun, 13 Feb 2011 08:31:09 +0100
 
 systemd (16-1) experimental; urgency=low
 
