--- a/changelog
+++ b/changelog
@@ -1,7 +1,11 @@
 systemd (17-1) UNRELEASED; urgency=low
 
+  [ Tollef Fog Heen ]
   * New upstream release
   * Clarify ifupdown instructions in README.Debian somewhat.
+
+  [ Michael Biebl ]
+  * Bump build dependency on valac to (>= 0.10.3).
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sun, 13 Feb 2011 08:31:09 +0100
 
