--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ systemd (17-1) UNRELEASED; urgency=low
 
   [ Michael Biebl ]
   * Bump build dependency on valac to (>= 0.10.3).
+  * Improve regex in lsb-base-logging.sh for X-Interactive scripts.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sun, 13 Feb 2011 08:31:09 +0100
 
