--- a/changelog
+++ b/changelog
@@ -7,7 +7,7 @@ systemd (17-1) UNRELEASED; urgency=low
     failing.  Initial implementation by Michael Biebl.  Closes: #612551
 
   [ Michael Biebl ]
-  * Bump build dependency on valac to (>= 0.10.3).
+  * Bump build dependency on valac-0.10 to (>= 0.10.3).
   * Improve regex in lsb-base-logging.sh for X-Interactive scripts.
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sun, 13 Feb 2011 08:31:09 +0100
