--- a/changelog
+++ b/changelog
@@ -3,12 +3,14 @@ systemd (17-1) UNRELEASED; urgency=low
   [ Tollef Fog Heen ]
   * New upstream release
   * Clarify ifupdown instructions in README.Debian somewhat.
+    Closes: #613320
   * Silently skip masked services in lsb-base-logging.sh instead of
     failing.  Initial implementation by Michael Biebl.  Closes: #612551
 
   [ Michael Biebl ]
   * Bump build dependency on valac-0.10 to (>= 0.10.3).
   * Improve regex in lsb-base-logging.sh for X-Interactive scripts.
+    Closes: #613325
 
  -- Tollef Fog Heen <tfheen@debian.org>  Sun, 13 Feb 2011 08:31:09 +0100
 
