--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ systemd (17-1) UNRELEASED; urgency=low
     Closes: #613320
   * Silently skip masked services in lsb-base-logging.sh instead of
     failing.  Initial implementation by Michael Biebl.  Closes: #612551
+  * Disable systemd-vconsole-setup.service for now.
 
   [ Michael Biebl ]
   * Bump build dependency on valac-0.10 to (>= 0.10.3).
