--- a/changelog
+++ b/changelog
@@ -13,6 +13,10 @@ systemd (215-9) UNRELEASED; urgency=medium
   * Don't auto-clean PrivateTmp dir in /var/tmp; in Debian we don't want to
     clean /var/tmp/ automatically. (Closes: #773313)
 
+  [ Michael Biebl ]
+  * sysv-generator: handle Provides: for non-virtual facility names.
+    (Closes: #774335)
+
  -- Didier Roche <didrocks@ubuntu.com>  Wed, 10 Dec 2014 13:57:17 +0100
 
 systemd (215-8) unstable; urgency=medium
