--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-systemd (215-9) UNRELEASED; urgency=medium
+systemd (215-9) unstable; urgency=medium
 
   [ Didier Roche ]
   * Add display managers autopkgtests.
@@ -20,7 +20,7 @@ systemd (215-9) UNRELEASED; urgency=medium
     isn't mounted yet. This happens with initramfs-tools < 0.118 which we
     might not get into Jessie any more. (Closes: #742048)
 
- -- Didier Roche <didrocks@ubuntu.com>  Wed, 10 Dec 2014 13:57:17 +0100
+ -- Martin Pitt <mpitt@debian.org>  Tue, 13 Jan 2015 11:24:43 +0100
 
 systemd (215-8) unstable; urgency=medium
 
