sysv-generator: Handle .sh suffixes when translating Provides:
Patch sent to upstream, but not applied yet:

  http://lists.freedesktop.org/archives/systemd-devel/2015-January/027248.html

Test case removed from the patch as we don't have the sysv-generator test suite
in 215 yet.

Closes: #775889

--- a/changelog
+++ b/changelog
@@ -1,5 +1,9 @@
 systemd (215-10) UNRELEASED; urgency=medium
 
+  [ Martin Pitt ]
+  * sysv-generator: Handle .sh suffixes when translating Provides:.
+    (Closes: #775889)
+
   [ Christian Kastner ]
   * Use common-session-noninteractive in systemd-user's PAM config, instead of
     common-session. The latter can include PAM modules like libpam-mount which
