--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 systemd (215-11) UNRELEASED; urgency=medium
 
+  [ Martin Pitt ]
   * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
     symlink, to work around regression in recent patch (see #776257).
   * Order ifup@.service and networking.service after network-pre.target.
@@ -13,6 +14,12 @@ systemd (215-11) UNRELEASED; urgency=medium
     after log out actually work.
   * debian/patches/series: Move upstreamed patches into the appropriate
     section.
+
+  [ Michael Biebl ]
+  * Make sure we run debian-fixup.service after /var has been mounted if /var
+    is on a separate partition. Otherwise we might end up creating the
+    /var/lock and /var/run symlink in the underlying root filesystem.
+    (Closes: #768644)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
 
