--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+systemd (215-11) UNRELEASED; urgency=medium
+
+  * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
+    symlink, to work around regression in recent patch (see #776257).
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
+
 systemd (215-10) unstable; urgency=medium
 
   [ Martin Pitt ]
