--- a/changelog
+++ b/changelog
@@ -2,6 +2,8 @@ systemd (215-11) UNRELEASED; urgency=medium
 
   * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
     symlink, to work around regression in recent patch (see #776257).
+  * Order ifup@.service and networking.service after network-pre.target.
+    (Closes: #766938)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
 
