--- a/changelog
+++ b/changelog
@@ -4,6 +4,9 @@ systemd (215-11) UNRELEASED; urgency=medium
     symlink, to work around regression in recent patch (see #776257).
   * Order ifup@.service and networking.service after network-pre.target.
     (Closes: #766938)
+  * Tone down "Network interface NamePolicy= disabled on kernel commandline,
+    ignoring" info message to debug, as we expect this while we disable
+    net.ifnames by default. (Closes: #762101, LP: #1411992)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
 
