--- a/changelog
+++ b/changelog
@@ -9,6 +9,8 @@ systemd (215-11) UNRELEASED; urgency=medium
     net.ifnames by default. (Closes: #762101, LP: #1411992)
   * logind: handle closing sessions over daemon restarts. (Closes: #759515,
     LP: #1415104)
+  * logind: Fix sd_eviocrevoke ioctl call, to make forced input device release
+    after log out actually work.
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
 
