--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-systemd (215-11) UNRELEASED; urgency=medium
+systemd (215-11) unstable; urgency=medium
 
   [ Martin Pitt ]
   * escape-beef-up-new-systemd-escape-tool.patch: Avoid creating a danling
@@ -21,7 +21,7 @@ systemd (215-11) UNRELEASED; urgency=medium
     /var/lock and /var/run symlink in the underlying root filesystem.
     (Closes: #768644)
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 26 Jan 2015 08:20:18 +0100
+ -- Martin Pitt <mpitt@debian.org>  Thu, 29 Jan 2015 09:01:54 +0100
 
 systemd (215-10) unstable; urgency=medium
 
