--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+systemd (215-12) UNRELEASED; urgency=medium
+
+  * debian/udev.README.Debian: Trim the parts which are obsolete, wrong, or
+    described in manpages. Only keep the Debian specific bits.
+    (Part of #776546)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 30 Jan 2015 15:56:22 +0100
+
 systemd (215-11) unstable; urgency=medium
 
   [ Martin Pitt ]
