--- a/changelog
+++ b/changelog
@@ -4,6 +4,10 @@ systemd (215-14) UNRELEASED; urgency=medium
     making it a target. Using a target had the downside that multiple display
     managers could hook into it at the same time which could lead to several
     failed start attempts for the non-default display manager.
+  * Update insserv-generator and map $x-display-manager to
+    display-manager.service, following the recent change in sysv-generator.
+    This avoids creating references to a no longer existing
+    x-display-manager.target unit.
 
  -- Michael Biebl <biebl@debian.org>  Sat, 28 Mar 2015 09:27:07 +0100
 
