--- a/changelog
+++ b/changelog
@@ -5,8 +5,11 @@ systemd (215-12) UNRELEASED; urgency=medium
     (Part of #776546)
   * Actually install udev's README.Debian when building for Debian.
     (Closes: #776546)
+  * Only start logind if dbus is installed. This fixes the noisy startup
+    failure in environments without dbus such as LXC containers or servers.
+    (part of #772700)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 30 Jan 2015 15:56:22 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 30 Jan 2015 15:56:22 +0100
 
 systemd (215-11) unstable; urgency=medium
 
