--- a/changelog
+++ b/changelog
@@ -23,6 +23,7 @@ systemd (215-12) UNRELEASED; urgency=medium
     for it.
   * rules: Fix by-path of mmc RPMB partitions and don't blkid them. Avoids
     kernel buffer I/O errors and timeouts. (LP: #1333140)
+  * Document systemctl --failed option. (Closes: #767267)
 
   [ Michael Biebl ]
   * core: Don't fail to run services in --user instances if $HOME is missing.
