--- a/changelog
+++ b/changelog
@@ -18,6 +18,9 @@ systemd (215-12) UNRELEASED; urgency=medium
   * cgroup: Don't trim cgroup trees created by someone else, just the ones
     that systemd itself created. This avoids cleaning up empty cgroups from
     e.g. LXC. (Closes: #777601)
+  * boot-and-services autopkgtest: Add CgroupsTest to check cgroup
+    creation/cleanup behaviour. This reproduces #777601 and verifies the fix
+    for it.
 
   [ Michael Biebl ]
   * core: Don't fail to run services in --user instances if $HOME is missing.
