--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-systemd (215-12) UNRELEASED; urgency=medium
+systemd (215-12) unstable; urgency=medium
 
   [ Martin Pitt ]
   * debian/udev.README.Debian: Trim the parts which are obsolete, wrong, or
@@ -33,7 +33,7 @@ systemd (215-12) UNRELEASED; urgency=medium
   * default-display-manager-generator: Avoid unnecessary /dev/null symlink and
     warning if there is no display-manager.service unit.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 30 Jan 2015 15:56:22 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 13 Feb 2015 12:08:31 +0100
 
 systemd (215-11) unstable; urgency=medium
 
