--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+systemd (215-13) UNRELEASED; urgency=medium
+
+  * Add hwclock-save.service to sync the system clock to the hardware clock on
+    shutdown, to provide monotonic time for reboots. (Note: this is a hack for
+    jessie; the next Debian release will enable timesyncd by default).
+    (Closes: #755722)
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 16 Feb 2015 16:11:12 +0100
+
 systemd (215-12) unstable; urgency=medium
 
   [ Martin Pitt ]
