--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ systemd (215-13) UNRELEASED; urgency=medium
     shutdown, to provide monotonic time for reboots. (Note: this is a hack for
     jessie; the next Debian release will enable timesyncd by default).
     (Closes: #755722)
+  * Check for correct architecture identifiers for SuperH. (Closes: #779710)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 16 Feb 2015 16:11:12 +0100
 
