--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@ systemd (215-13) UNRELEASED; urgency=medium
     jessie; the next Debian release will enable timesyncd by default).
     (Closes: #755722)
   * Check for correct architecture identifiers for SuperH. (Closes: #779710)
+  * networkd: Fix stopping v4 dhcpclient when the carrier is lost. Thanks
+    Christos Trochalakis! (Closes: #779571)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 16 Feb 2015 16:11:12 +0100
 
