--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@ systemd (215-13) UNRELEASED; urgency=medium
   * Check for correct architecture identifiers for SuperH. (Closes: #779710)
   * networkd: Fix stopping v4 dhcpclient when the carrier is lost. Thanks
     Christos Trochalakis! (Closes: #779571)
+  * Fix segfault with units that depend on themselves. (Closes: #780675)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 16 Feb 2015 16:11:12 +0100
 
