boot-and-services, display-managers autopkgtests: Add missing python3 test dependency

--- a/changelog
+++ b/changelog
@@ -14,6 +14,8 @@ systemd (215-14) UNRELEASED; urgency=medium
   * scope: Make attachment of initial PIDs more robust. Fixes crash with
     processes that get started by an init.d script with a different (aliased)
     name when the cgroup becomes empty. (Closes: #781210)
+  * boot-and-services, display-managers autopkgtests: Add missing python3 test
+    dependency.
 
  -- Michael Biebl <biebl@debian.org>  Sat, 28 Mar 2015 09:27:07 +0100
 
