Make the journald to syslog forwarding more robust
by increasing the maximum datagram queue length from 10 to 512.

Closes: #762700

--- a/changelog
+++ b/changelog
@@ -18,6 +18,10 @@ systemd (215-14) UNRELEASED; urgency=medium
   * boot-and-services, display-managers autopkgtests: Add missing python3 test
     dependency.
 
+  [ Christian Seiler ]
+  * Make the journald to syslog forwarding more robust by increasing the
+    maximum datagram queue length from 10 to 512. (Closes: #762700)
+
  -- Michael Biebl <biebl@debian.org>  Sat, 28 Mar 2015 09:27:07 +0100
 
 systemd (215-13) unstable; urgency=medium
