--- a/changelog
+++ b/changelog
@@ -22,6 +22,13 @@ systemd (215-14) UNRELEASED; urgency=medium
   * Make the journald to syslog forwarding more robust by increasing the
     maximum datagram queue length from 10 to 512. (Closes: #762700)
 
+  [ Marco d'Itri ]
+  * Avoid writing duplicate entries in 70-persistent-net.rules by double
+    checking if the new udev rule has already been written for the given
+    interface. This happens if multiple add events are generated before the
+    write_net_rules script returns and udevd renames the interface.
+    (Closes: #765577)
+
  -- Michael Biebl <biebl@debian.org>  Sat, 28 Mar 2015 09:27:07 +0100
 
 systemd (215-13) unstable; urgency=medium
