--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-systemd (215-14) UNRELEASED; urgency=medium
+systemd (215-14) unstable; urgency=medium
 
   [ Michael Biebl ]
   * Map $x-display-manager LSB facility to display-manager.service instead of
@@ -31,7 +31,7 @@ systemd (215-14) UNRELEASED; urgency=medium
     write_net_rules script returns and udevd renames the interface.
     (Closes: #765577)
 
- -- Michael Biebl <biebl@debian.org>  Sat, 28 Mar 2015 09:27:07 +0100
+ -- Michael Biebl <biebl@debian.org>  Mon, 30 Mar 2015 13:26:52 +0200
 
 systemd (215-13) unstable; urgency=medium
 
