--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ systemd (215-15) UNRELEASED; urgency=medium
 
   [ Martin Pitt ]
   * Fix getty restart loop when PTS device is gone. (Closes: #780711)
+  * Run timesyncd in virtual machines. (Closes: #762343)
 
  -- Martin Pitt <mpitt@debian.org>  Wed, 08 Apr 2015 10:53:38 +0200
 
