--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ systemd (215-16) UNRELEASED; urgency=medium
   [ Michael Biebl ]
   * Do not print anything while passwords are being queried. This should make
     password prompts without plymouth more usable. (Closes: #765013)
+  * Skip filesystem check if already done by the initramfs. (Closes: #782522)
 
  -- Martin Pitt <mpitt@debian.org>  Sun, 12 Apr 2015 06:04:48 -0500
 
