--- a/changelog
+++ b/changelog
@@ -1,9 +1,9 @@
-systemd (215-17) UNRELEASED; urgency=medium
+systemd (215-17) unstable; urgency=high
 
   * cryptsetup: Implement offset and skip options. (Closes: #751707,
     LP: #953875)
 
- -- Martin Pitt <mpitt@debian.org>  Thu, 16 Apr 2015 07:12:08 -0500
+ -- Martin Pitt <mpitt@debian.org>  Thu, 16 Apr 2015 10:26:46 -0500
 
 systemd (215-16) unstable; urgency=medium
 
