--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+eudev (215:1.9-1) UNRELEASED; urgency=medium
+
+  * Fork eudev package from systemd.
+
+ -- Jaret Jay Cantu <jaret@realitysend.com>  Thu, 14 May 2015 23:49:46 -0400
+
 systemd (215-17) unstable; urgency=high
 
   * cryptsetup: Implement offset and skip options. (Closes: #751707,
