--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+eudev (219:3.0-1) UNRELEASED; urgency=medium
+
+  * Update for gentoo eudev master branch up to commits on May 4, 2015.
+
+ -- Anto <aryanto@chello.at>  Sun, 24 May 2015 20:24:05 +0200
+
 eudev (215:1.9-1) UNRELEASED; urgency=medium
 
   * Fork eudev package from systemd.
